--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Start</name>
+    <name>AnyBalance</name>
 
     <description>Economy plugin</description>
     <properties>
