--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -2,3 +2,7 @@ No_Sufficient_Coins: '&cYou have not sufficient coins!'
 No_Permission: '&cYou have not sufficient permissions to perform this action'
 Console: '&cYou are not a player'
 Coins: '&eYou have &c%anyeconomy_balance% &ecoins!'
+Coins_Other: '&e%second_player% has &c%second_playercoins% &ecoins'
+Removed_Coins: '&eSuccess removed &c%second_playercoins% &efrom %second_player%'
+Added_Coins: '&eSuccess added &c%second_playercoins% &eto %second_player% balance'
+Reset_Coins: '&eYou setted %second_playercoins% &ebalance to &c%default_coins%'
