--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>Utils</groupId>
-    <artifactId>Start</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>AnyBalance</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>AnyBalance</name>
