1:49 A.M Bugs fixxed: getStorage() [NEW: getStorageMethod()]

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -6,5 +6,6 @@ Coins_Other: '&e%second_player% has &c%second_playercoins% &ecoins'
 Removed_Coins: '&eSuccess removed &c%second_playercoins% &efrom %second_player%'
 Added_Coins: '&eSuccess added &c%second_playercoins% &eto %second_player% balance'
 Reset_Coins: '&eYou setted %second_player% balance to &c%default_coins%'
+Not_Player: '&cThis player were not found'
 
 reload: '&eAnyBalance has been reloaded'
