--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,12 +1,12 @@
-No_Sufficient_Coins: '&cYou have not sufficient coins!'
-No_Permission: '&cYou have not sufficient permissions to perform this action'
+No_Sufficient_Coins: '&cYou have insufficient coins!'
+No_Permission: '&cYou have insufficient permissions to perform this action'
 Console: '&cYou are not a player'
-Coins: '&eYou have &c%anybalance_balance% &ecoins!'
+Coins: '&eYou have &c%anyeconomy_balance% &ecoins!'
 Coins_Other: '&e%second_player% has &c%second_playercoins% &ecoins'
-Removed_Coins: '&eSuccess removed &c%second_playercoins% &efrom %second_player%'
-Added_Coins: '&eSuccess added &c%second_playercoins% &eto %second_player% balance'
-Reset_Coins: '&eYou setted %second_player% balance to &c%default_coins%'
-Not_Player: '&cThis player were not found'
-NoValid_Number: '&cYou must put a valid number'
+Removed_Coins: '&eSuccessfully removed &c%second_playercoins% &eto %second_player%'
+Added_Coins: '&eSuccessfully added &c%second_playercoins% &ecoins to %second_player%´s balance'
+Reset_Coins: '&eYou set %second_player%´s balance to &c%default_coins%'
+Not_Player: '&cThis player was not found'
+NoValid_Number: '&cYou must provide a valid number'
 
 reload: '&eAnyBalance has been reloaded'
